--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           /
         </button>
         <br />
-        <button class="btnEqual" onclick="equal()"></button>
+        <button class="btnEqual" onclick="equal()">=</button>
       </div>
     </div>
     <script src="/script.js"></script>
