--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           *
         </button>
         <br />
-        <button class="btn" onclick="press(.)">.</button>
+        <button class="btn" onclick="press('.')">.</button>
         <button class="btn" onclick="press(0)">0</button>
         <button class="btn" onclick="erase()">C</button>
         <button style="background: #fff5e6" class="btn" onclick="press('/')">
